fix: change html/css structure fix aside border overflow

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ li {
 
 /* Container */
 .container {
+    padding:0;
     /* Positioning */
     display: flex;
     flex-flow: row nowrap;
@@ -64,12 +65,8 @@ li {
 aside {
     /* Box-model */
     width: 100%;
-    max-width: 310px;
-    min-height: 100%;
-    max-height: 100%;
-    /* Visual */
-    border: 6px solid black;
-    border-right: none;
+    max-width: 320px;
+
     /* Positioning */
     position: fixed;
     overflow: auto;
@@ -83,7 +80,7 @@ aside li { list-style-type: none; }
 figure {
     /* Box-model */
     padding: 32px 55px 22px 55px;
-    border-bottom: 6px solid black;
+    border-bottom: 5px solid black;
 }
 
 picture {
@@ -142,13 +139,22 @@ main {
     /* Box-model */
     width: 100%;
     max-width: 1000px;
-    padding: 70px 65px 80px 75px;
-    margin-left: 310px;
-    /* Visual */
-    border: 6px solid black;  
+
+    position: relative;
+    overflow: hidden;
+
+    border: 5px solid black;
 }
 
 main article { margin-bottom: 70px; }
+
+.personal__info{
+    margin-left: 320px;
+    padding: 65px 75px 75px 80px;
+
+    border-left: 5px solid black;
+
+}
 
 /* Tech skills */
 .tech-skills { margin-bottom: 40px; }
